src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.margin_20 {
  margin: 20px;
}

.padding_20 {
  padding: 20px;
}

.padding_bottom {
  padding-bottom: 10px;
  padding-left: 10px;
}

.margin_top_10 {
  margin-top: 10px;
}

.padding_side_20 {
  padding-left: 20px;
  padding-right: 20px;
}

.margin_bottom_10 {
  margin-bottom: 10px;
}

.box_container_padded {
  padding: 20px;
}

.footer {
  background: #000000;
  color: white;
}
.footer .links ul {
  list-style-type: none;
}
.footer .links li a {
  color: white;
  transition: color 0.2s;
}
.footer .links li a:hover {
  text-decoration: none;
  color: #4180CB;
}
.footer .about-company i {
  font-size: 25px;
}
.footer .about-company a {
  color: white;
  transition: color 0.2s;
}
.footer .about-company a:hover {
  color: #4180CB;
}
.footer .location i {
  font-size: 18px;
}
.footer .copyright p {
  border-top: 1px solid rgba(255, 255, 255, 0.1);
}

.dapp-top-section {
  flex: 0 0 50%;
  padding: 0;
}

.dapp-middle-section {
  flex: 0 0 50%;
  padding: 0;
}

.article-container {
  display: flex;
  flex-wrap: wrap;
}

.small_container {
  width: 100px;
}








.blueButton {
  color: #0081c9 !important;
}

.redWhiteButton {
  color: #fff !important;
}
.redWhiteButton:hover {
  background-color: #940000 !important;
  border: 0px solid !important;
}
.redWhiteButton:disabled {
  background-color: #b6b6b6 !important;
  color: #8d8d8d !important;
  border: 4px solid !important;
  border-color: #8d8d8d !important;
}

.yellowButton  {
  background-image: linear-gradient(to top, #f0b624, #ffdb80) !important;
}
.yellowButton:hover {
  filter: brightness(90%);
}
.yellowButton:disabled {
  filter: grayscale();
}

.redButton  {
  background-image: linear-gradient(to top, red, #ff8080) !important;
}
.redButton:hover {
  filter: brightness(85%);
}


.blueGradient {
  background: linear-gradient(0deg, #5BC0F8, #86E5FF);
}

.lightGreyGradient {
  background: linear-gradient(180deg, #b6b6b633, transparent);
}


.blueGradientText {
  background: linear-gradient(0deg, #209de0, #86E5FF);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  font-family: Arial, Helvetica, sans-serif;
}

.blueGradientButton {
  background-image: linear-gradient(to top, #209de0, #86E5FF) !important;
  transition: all .2s ease-in-out !important;
}
.blueGradientButton:hover {
  transform: scale(1.1);
}
.blueGradientButton--navigation:hover {
  filter: drop-shadow(0px 0px 20px black);
  filter: brightness(85%);
}
.blueGradientButton:disabled {
  filter: grayscale();
}

.discardButton {
  border: 2px solid red !important;
}
.discardButton:hover {
  background-color: red !important;
  color: white !important;
}
.discardButton:active {
  background-color: rgb(155, 0, 0) !important;
  border-color:rgb(155, 0, 0) !important;
}


.fullPage {
  height: 100%;
}
.partialPage {
  height: 80%;
}


.validInput {
  border: 1px green;
}
.invalidInput {
  border: 1px red;
}


.iconLink {
  width: 30px;
  height: 30px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  text-decoration: none;
  font-size: 26px;
  color: #fff;
  border-radius: 50%;
  outline: solid 2px #fff;
  outline-offset: -8px;
  transition-property: outline-offset, outline-color, background-color;
  transition-duration: .25s;
}

.iconLink:hover {
  animation: spin .4s ease-out;
  color: #fff;
  outline-offset: 0px;
  background-image: radial-gradient(circle at 50% 50%, #86E5FF, #209de0) !important;
}

@keyframes spin {
  100%{transform: rotate(90deg)}
}

.blueGradientIcon {
  background-image: linear-gradient(to top, #209de0, #86E5FF) !important;
}

/*

  /-------------------------/
  /----- Color Palette -----/
  /-------------------------/

  0081C9  - Sea Blue
  5BC0F8  - Clear Sky
  86E5FF  - Cold Sky
  FFC93C  - Crayon Sun

  696969  - Medium Grey
  8d8d8d  - Light Grey
  b6b6b6  - White Grey

*/

